--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 [theme]
-primaryColor="#e22202"
+primaryColor="#cb260a"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#408e31"
+secondaryBackgroundColor="#31aa1a"
 textColor="#262730"
 font="sans serif"
+
