--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,6 @@
 [theme]
-primaryColor = "#f63366"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#f0f2f6"
-textColor = "#262730"
-font = "sans serif"
-
+primaryColor="#cb131a"
+backgroundColor="#f5f7f3"
+secondaryBackgroundColor="#76c14c"
+textColor="#262730"
+font="sans serif"
